RESOLVED FIXED 204213
Fix getTotalLength() and getPointAtLength() for optimized rect and ellipse renderers
https://bugs.webkit.org/show_bug.cgi?id=204213
Summary Fix getTotalLength() and getPointAtLength() for optimized rect and ellipse re...
Said Abou-Hallawa
Reported 2019-11-14 17:02:41 PST
Since these functions were added in r231955, they do not handle the case of optimized rect and ellipse renderers. For these renderers, we do not create a path to draw the simple rect or ellipse. Instead we call the rect or ellipse functions directly from the GraphicsContext. But for getTotalLength() and getPointAtLength(), we need to create a temporary Path from the SVGElement then use it to answer the questions of these functions and finally delete it.
Attachments
Patch (9.02 KB, patch)
2019-11-14 17:18 PST, Said Abou-Hallawa
no flags
Patch (55.58 KB, patch)
2019-11-16 07:21 PST, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2019-11-14 17:18:27 PST
Said Abou-Hallawa
Comment 2 2019-11-16 07:21:07 PST
WebKit Commit Bot
Comment 3 2019-11-18 13:45:49 PST
Comment on attachment 383696 [details] Patch Clearing flags on attachment: 383696 Committed r252563: <https://trac.webkit.org/changeset/252563>
WebKit Commit Bot
Comment 4 2019-11-18 13:45:50 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-11-18 13:46:21 PST
Note You need to log in before you can comment on or make changes to this bug.